[package]
name = "pipeop"
version = "0.1.5"
edition = "2021"
authors = ["David <75451291+daviddenhaan@users.noreply.github.com>"]
description = "Adding the pipe operator to Rust via a declarative macro."
license = "MIT"
repository = "https://github.com/daviddenhaan/pipeop"
homepage = "https://github.com/daviddenhaan/pipeop"
keywords = ["macro"]
