[package]
name = "pipeop"
version = "0.1.6"
edition = "2021"
authors = ["David <75451291+daviddenhaan@users.noreply.github.com>"]
description = "Adding the pipe operator to Rust with a declarative macro."
license = "MIT"
repository = "https://github.com/daviddenhaan/pipeop"
homepage = "https://github.com/daviddenhaan/pipeop"
keywords = ["macro", "no_std"]
categories = ["no-std"]
